link_libraries(gebi-static boost_unit_test_framework)
add_definitions(-DBOOST_TEST_DYN_LINK -DBOOST_AUTO_TEST_MAIN)

file(GLOB TESTS test_*.cpp)
foreach(i ${TESTS})
    get_filename_component(i_fn ${i} NAME_WE)
    message(STATUS "adding test: ${i_fn}")
    add_executable(${i_fn} ${i})
    add_test(${i_fn} ${i_fn})
endforeach(i)
